[gd_scene load_steps=6 format=3 uid="uid://c8v6chl2e1ync"]

[ext_resource type="Theme" uid="uid://yqpu1k43isuw" path="res://themes/kenney_rpg.tres" id="1_ugcap"]
[ext_resource type="Script" uid="uid://bax2hhyeb8vtx" path="res://scenes/ui/LevelSummaryPanel/LevelSummaryPanel.gd" id="2_xstww"]
[ext_resource type="PackedScene" uid="uid://c1ognd1rd5rw5" path="res://scenes/sprites/Cup/Cup.tscn" id="3_sshju"]

[sub_resource type="LabelSettings" id="LabelSettings_ajdow"]
shadow_color = Color(0, 0, 0, 0.54902)

[sub_resource type="LabelSettings" id="LabelSettings_ivfkv"]
shadow_color = Color(0, 0, 0, 0.54902)

[node name="LevelSummaryPanel" type="MarginContainer"]
custom_minimum_size = Vector2(400, 250)
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_top = -400
script = ExtResource("2_xstww")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_ugcap")
theme_type_variation = &"BeigePaperPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Level Complete!"
label_settings = SubResource("LabelSettings_ajdow")
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 5

[node name="HighscoreLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "New Highscore!"
label_settings = SubResource("LabelSettings_ivfkv")
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="Cup" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/MarginContainer" instance=ExtResource("3_sshju")]
position = Vector2(90, 0)
scale = Vector2(2, 2)

[node name="Cup2" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/MarginContainer" instance=ExtResource("3_sshju")]
position = Vector2(216, 0)
scale = Vector2(2, 2)
type = 1

[node name="Cup3" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/MarginContainer" instance=ExtResource("3_sshju")]
position = Vector2(325, 0)
scale = Vector2(2, 2)
type = 6

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_type_variation = &"YellowProgressBar"
value = 50.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_right = NodePath("../../MarginContainer2/NextButton")
focus_next = NodePath("../../MarginContainer2/NextButton")
focus_previous = NodePath("../../MarginContainer2/NextButton")
shortcut_in_tooltip = false
text = "Restart"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../../MarginContainer/RestartButton")
focus_next = NodePath("../../MarginContainer/RestartButton")
focus_previous = NodePath("../../MarginContainer/RestartButton")
shortcut_in_tooltip = false
text = "Next"
